[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Scene_Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/menu_bg.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Prefabs/Viking_Sprites.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/selector/selector.png" type="Texture" id=4]
[ext_resource path="res://Assets/selector/selector_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/selector/selector_3.png" type="Texture" id=6]
[ext_resource path="res://Assets/selector/selector_4.png" type="Texture" id=7]
[ext_resource path="res://Assets/title.png" type="Texture" id=8]
[ext_resource path="res://Assets/Styles/menu_theme.tres" type="Theme" id=9]
[ext_resource path="res://Assets/Fonts/menu_buttons.tres" type="DynamicFont" id=10]
[ext_resource path="res://Assets/Styles/main_theme.tres" type="Theme" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 2 )

[node name="Viking_Sprites" parent="Background" instance=ExtResource( 3 )]
visible = false
position = Vector2( 1300, 650 )
scale = Vector2( 3, 3 )

[node name="Viking_Sprites2" parent="Background" instance=ExtResource( 3 )]
visible = false
position = Vector2( 1500, 650 )
scale = Vector2( 3.5, 3.5 )
z_index = 1

[node name="Viking_Sprites3" parent="Background" instance=ExtResource( 3 )]
visible = false
position = Vector2( 1700, 650 )
scale = Vector2( 3, 3 )

[node name="Selector" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1050, 431 )
frames = SubResource( 1 )
frame = 4
playing = true

[node name="Main_Menu" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 100, 0 )

[node name="Title" type="TextureRect" parent="Main_Menu"]
anchor_right = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = 640.0
margin_bottom = 340.0
texture = ExtResource( 8 )

[node name="Menu_Buttons" type="VBoxContainer" parent="Main_Menu"]
anchor_bottom = 1.0
margin_top = 350.0
margin_right = 300.0
margin_bottom = 730.0

[node name="Play_Button" type="Button" parent="Main_Menu/Menu_Buttons"]
margin_top = 5.0
margin_right = 300.0
margin_bottom = 119.0
rect_min_size = Vector2( 300, 70 )
size_flags_vertical = 6
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Play"

[node name="Options_Button" type="Button" parent="Main_Menu/Menu_Buttons"]
margin_top = 133.0
margin_right = 300.0
margin_bottom = 247.0
rect_min_size = Vector2( 300, 70 )
size_flags_vertical = 6
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Options"

[node name="Quit_Button" type="Button" parent="Main_Menu/Menu_Buttons"]
margin_top = 261.0
margin_right = 300.0
margin_bottom = 375.0
rect_min_size = Vector2( 300, 70 )
size_flags_vertical = 6
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Quit"

[node name="Options" type="VBoxContainer" parent="Main_Menu"]
margin_left = 350.0
margin_top = 350.0
margin_right = 700.0
margin_bottom = 1000.0
size_flags_horizontal = 0

[node name="Options_Tween" type="Tween" parent="Main_Menu/Options"]

[node name="Volume_Label" type="Label" parent="Main_Menu/Options"]
margin_right = 350.0
margin_bottom = 126.0
rect_min_size = Vector2( 300, 70 )
size_flags_vertical = 7
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 10 )
text = "Sound Volume"
valign = 1

[node name="Volume_Slider" type="HSlider" parent="Main_Menu/Options"]
margin_top = 130.0
margin_right = 350.0
margin_bottom = 256.0
rect_min_size = Vector2( 300, 70 )
size_flags_vertical = 7
theme = ExtResource( 11 )
ticks_on_borders = true

[node name="Name" type="Label" parent="Main_Menu/Options"]
margin_top = 260.0
margin_right = 350.0
margin_bottom = 386.0
rect_min_size = Vector2( 300, 70 )
size_flags_vertical = 7
theme = ExtResource( 11 )
custom_fonts/font = ExtResource( 10 )
text = "Viking Name"
valign = 1

[node name="Name_Entry" type="TextEdit" parent="Main_Menu/Options"]
margin_top = 390.0
margin_right = 350.0
margin_bottom = 516.0
rect_min_size = Vector2( 300, 70 )
focus_mode = 1
size_flags_vertical = 7
theme = ExtResource( 11 )
text = "Ragnar"

[node name="Back_Button" type="Button" parent="Main_Menu/Options"]
margin_top = 520.0
margin_right = 350.0
margin_bottom = 650.0
rect_min_size = Vector2( 300, 70 )
size_flags_vertical = 7
theme = ExtResource( 9 )
custom_fonts/font = ExtResource( 10 )
text = "Back"

[connection signal="pressed" from="Main_Menu/Menu_Buttons/Play_Button" to="." method="start_game"]
[connection signal="pressed" from="Main_Menu/Menu_Buttons/Options_Button" to="." method="show_options"]
[connection signal="pressed" from="Main_Menu/Menu_Buttons/Quit_Button" to="." method="quit"]
[connection signal="draw" from="Main_Menu/Options" to="." method="adjust_options_scale"]
[connection signal="tween_completed" from="Main_Menu/Options/Options_Tween" to="." method="_on_Options_Tween_tween_completed"]
[connection signal="pressed" from="Main_Menu/Options/Back_Button" to="." method="hide_options"]
